@@ -1268,16 +1268,6 @@ argument_list|)
 expr_stmt|;
 name|addToMap
 argument_list|(
-name|ColumnPrefixFilter
-operator|.
-name|class
-argument_list|,
-name|code
-operator|++
-argument_list|)
-expr_stmt|;
-name|addToMap
-argument_list|(
 name|Delete
 index|[]
 operator|.
@@ -1346,6 +1336,16 @@ comment|// List
 name|addToMap
 argument_list|(
 name|List
+operator|.
+name|class
+argument_list|,
+name|code
+operator|++
+argument_list|)
+expr_stmt|;
+name|addToMap
+argument_list|(
+name|ColumnPrefixFilter
 operator|.
 name|class
 argument_list|,
@@ -3020,13 +3020,26 @@ name|ClassNotFoundException
 name|e
 parameter_list|)
 block|{
-throw|throw
-operator|new
-name|RuntimeException
+name|LOG
+operator|.
+name|error
 argument_list|(
 literal|"Can't find class "
 operator|+
 name|className
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Can't find class "
+operator|+
+name|className
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
@@ -3055,6 +3068,8 @@ argument_list|,
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|writable
 operator|.
 name|readFields
@@ -3062,6 +3077,32 @@ argument_list|(
 name|in
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Error in readFields"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Error in readFields"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 name|instance
 operator|=
 name|writable
