@@ -483,6 +483,9 @@ Release 0.21.0 - Unreleased
    HBASE-2928  Fault in logic in BinaryPrefixComparator leads to
                ArrayIndexOutOfBoundsException (pranav via jgray)
    HBASE-2924  TestLogRolling doesn't use the right HLog half the time
+   HBASE-2931  Do not throw RuntimeExceptions in RPC/HbaseObjectWritable
+               code, ensure we log and rethrow as IOE
+               (Karthik Ranganathan via Stack)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
